# todo-phase-3

./: .gitignore  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  PHASE_III_SUMMARY.md  README.md  SPECIFICATIONS_INDEX.md  START_HERE.md  build.sh  pyproject.toml  vercel.json
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  CLAUDE.md  DATABASE_SETUP.md  Makefile  QUICKSTART_DATABASE.md  README.md  alembic.ini  config.py  db.py  main.py  models.py  render.yaml  requirements.txt  reset_db.py  test_db_setup.py
backend/alembic/: env.py
backend/mcp_server/: __init__.py  config.py  tools.py
backend/middleware/: __init__.py  auth.py
backend/models/: __init__.py  conversation.py  message.py  reminder.py  task.py  user.py
backend/routes/: __init__.py  auth.py  chat.py  tasks.py
backend/services/: __init__.py  email_service.py  openai_agent.py  reminder_checker.py
backend/templates/: reminder_email.html
backend/utils/: __init__.py  jwt.py  validation.py
frontend/: .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: index.ts  useAI.ts  useStats.ts  useTasks.ts
frontend/lib/: api.ts  auth.ts
specs/: agent.md  architecture.md  implementation-plan.md  mcp-tools.md  tasks.md
src/: __init__.py  cli_parser.py  constants.py  display_formatter.py  error_validator.py  main.py  todo_manager.py
(+89 files in other folders)
